# ALGT2

./: .gitignore  ALGT  ALGT-0.2.0  ALGT-0.2.0.1  ALGT-0.2.0.2  ALGT-0.2.0.3  ALGT-0.2.0.4  ALGT2-latest  ALGT2.cabal  Module.lang  README.md  Template.language  build.sh  repl  search  searchTodo  stack.yaml
Languate/: Languate.language
Languate/programs/: Bool.lgt
app/: ArgumentParser.hs  Main.hs
binaries/: ALGT-0.2.0  ALGT-0.2.0.1  ALGT-0.2.0.4  ALGT2-latest
scripts/: build.sh  lint  searchTodo
src/: AssetUtils.hs  Assets.hs  Lib.hs  Paths_ALGT2.hs  Repl.hs
src/Assets/: ALGT.language  Functions.language  Main.language  MetaFunctionSyntax.language  Readme.md  RelationSyntax.language  Relations.language  STFL.language  TestLanguage.language  TestLanguageFaulty.language
src/Assets/ALGT/: Builtins.language  Readme.md
src/Assets/ALGT/Native/: Functions.language  Helper.language  Relations.language  Syntax.language
src/Assets/ALGT/Sugared/: Syntax.language
src/Assets/Faulty/: FunctionDuplicateNameTest.language  FunctionIncorrectNameTest.language  LeftRecursiveSyntax.language  SyntaxUndeclared.language  TestShadowing.language  TitleMismatch.language  VariableTypingErrors.language
src/Assets/Faulty/Relations/: AllOutRel.language  EmptyLine.language  NotDeclared.language  NotLocal.language  Relation.language
src/Assets/MetaSyntax/: ALGT.language  Functions.language  Helper.language  Main.language  Relations.language  Syntax.language
src/Assets/Resources/: InterpreterHelp.md  Readme.md  Template.language
src/Assets/TestInput/: LoopingSupertypes.language
src/Assets/TestInput/Faulty/: FunctionDuplicateNameTest.language  FunctionIncorrectNameTest.language  FunctionTyperTest.language  TestShadowing.language  VariableTypingErrors.language
src/Assets/TestInput/Faulty/Relations/: DuplicateRelation.language  EmptyLine.language  IncorrectRule.language  NotDeclared.language  TypeErr.language  UnknownTypeRelation.language  UnkownTypeRelation.language
src/Assets/TestInput/Nested/: L.language  X.language  Y.language  Z.language
src/Assets/TestLanguages/: STFL.language
src/Graphs/: Image.hs  Lattice.hs  LatticeImage.hs  PathFinder.hs  SearchCycles.hs
src/LanguageDef/: 0_Readme.txt  API.hs  Builtins.hs  Combiner.hs  DebugAPI.hs  ExceptionInfo.hs  Expression.hs  Function.hs  FunctionInterpreter.hs  FunctionTyper.hs  Grouper.hs  Interpreter.hs  LangDefs.hs  LangDefsFix.hs  LanguageAspect.hs  LanguageDef.hs  LocationInfo.hs  MetaExpression.hs  MetaFunction.hs  MetaSyntax.hs  ModuleLoader.hs  ParseTree.hs  Proof.hs  Prover.hs  Pt2Syntax.hs  Readme.md  Relation.hs  Relations.hs  Rule.hs  Scope.hs  Syntax.hs  Typer.hs
src/LanguageDef/Data/: BNF.hs  Expression.hs  Function.hs  LanguageDef.hs  ParseTree.hs  Proof.hs  Relation.hs  Rule.hs  SyntFormIndex.hs  SyntacticForm.hs
src/LanguageDef/Syntax/: All.hs  BNF.hs  Combiner.hs  MetaSyntax.hs  ParseTree.hs  Pt2Syntax.hs  Syntax.hs
src/LanguageDef/Tools/: Checkable.hs  ExceptionInfo.hs  Grouper.hs  LocationInfo.hs  Scope.hs
src/LanguageDef/Utils/: Checkable.hs  ExceptionInfo.hs  Grouper.hs  LocationInfo.hs  Scope.hs
src/Utils/: All.hs  CreateAssets.hs  GetLine.hs  PureIO.hs  Test.hs  ToString.hs  Utils.hs  Version.hs
test/: Spec.hs
