name:                ALGT2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pietervdvn/ALGT2#readme
license:             BSD3
license-file:        LICENSE
author:              Pieter Vander Vennet
maintainer:          pietervdvn@gmail.com
copyright:           Left
category:            GPL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Utils.Test
  other-modules:
        Paths_ALGT2
        LanguageDef.LanguageDef
        LanguageDef.LocationInfo
        LanguageDef.Syntax.MetaSyntax
        LanguageDef.Syntax.ParseTree
        LanguageDef.Syntax.Pt2Syntax
        LanguageDef.Syntax.Syntax
        LanguageDef.Syntax.Combiner
        LanguageDef.ModuleManagament
        Paths_ALGT2
        Utils.All
        Utils.ToString
        Utils.Utils
        Utils.Version
        Assets
        LanguageDef.Syntax.All
        Utils.CreateAssets

  ghc-options:         -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, containers, microlens, microlens-th, random, parsec, directory, bytestring, Glob, QuickCheck, doctest, mtl, deepseq
  default-language:    Haskell2010

executable ALGT2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-tabs
  build-depends:       base, ALGT2
  default-language:    Haskell2010

test-suite ALGT2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, ALGT2, Glob, QuickCheck, doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pietervdvn/ALGT2
