name:                ALGT2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pietervdvn/ALGT2#readme
license:             BSD3
license-file:        LICENSE
author:              Pieter Vander Vennet
maintainer:          pietervdvn@gmail.com
copyright:           Left
category:            GPL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
        Lib
        Utils.Test
        Assets
        Utils.All
        Utils.CreateAssets
        Utils.PureIO
        Utils.ToString
        Utils.Utils
        Repl
  other-modules:
        Paths_ALGT2
        AssetUtils
        Graphs.Lattice
        Graphs.PathFinder
        Graphs.SearchCycles
        LanguageDef.API
        LanguageDef.Combiner
        LanguageDef.Data.BNF
        LanguageDef.Data.Expression
        LanguageDef.Data.Function
        LanguageDef.Data.LanguageDef
        LanguageDef.Data.ParseTree
        LanguageDef.Data.Proof
        LanguageDef.Data.Relation
        LanguageDef.Data.Rule
        LanguageDef.Data.SyntFormIndex
        LanguageDef.Data.SyntacticForm
        LanguageDef.Interpreter
        LanguageDef.LangDefs
        LanguageDef.LangDefsFix
        LanguageDef.MetaSyntax
        LanguageDef.ModuleLoader
        LanguageDef.Prover
        LanguageDef.Typer
        LanguageDef.Utils.Checkable
        LanguageDef.Utils.ExceptionInfo
        LanguageDef.Utils.Grouper
        LanguageDef.Utils.LocationInfo
        LanguageDef.Builtins
        Utils.GetLine


  ghc-options:         -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, containers, microlens, microlens-th, random, parsec, directory, bytestring, Glob, QuickCheck, doctest, mtl, deepseq, ansi-wl-pprint, ansi-terminal, deepseq, time
  default-language:    Haskell2010

executable ALGT2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-tabs
  build-depends:       base, ALGT2, optparse-applicative >= 0.13, containers, bytestring
  default-language:    Haskell2010
  other-modules:
        ArgumentParser


test-suite ALGT2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, ALGT2, Glob, QuickCheck, doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pietervdvn/ALGT2
